--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=pluck
 # this is the name displayed in the SonarQube UI
-sonar.projectName=Pluck\Плюк
+sonar.projectName=Pluck\u041F\u043B\u044E\u043A
 
 # версия проекта
 sonar.projectVersion=1.2.0
@@ -15,7 +15,7 @@ sonar.links.issue=https://github.com/infostart-hub/pluck/issues
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
 # If not set, SonarQube starts looking for source code from the directory containing
 # the sonar-project.properties file.
-sonar.sources=./src,./tasks,./features
+sonar.sources=./src,./features
 
 # маска поиска файлов на проверку
 sonar.inclusions=**/*.os
